added my work links

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="layer">
             <h3>Resturant Website</h3>
             <p>I build This Site for a small Local Restaurant</p>
-            <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://sri-padmavathi-cusiene.netlify.app" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
@@ -120,7 +120,7 @@
           <div class="layer">
             <h3>Saloon Website</h3>
             <p>I build This Site for a small Local saloon </p>
-            <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://nikitha-saloon.netlify.app" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
@@ -128,7 +128,7 @@
           <div class="layer">
             <h3>Cosmos Website</h3>
             <p>I designed a Website that shows a pic, which NASA captured on the day you Born</p>
-            <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://cosmos-dinesh.netlify.app" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
       </div>
