--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
   </div>
   <footer>
-    <p>Copyright © Dinesh. Built with <i class="fa-solid fa-heart"></i> by Dinesh</p>
+    <p>Copyright © Dinesh Vardhan. Built with <i class="fa-solid fa-heart"></i> by Dinesh</p>
   </footer>
 </div>
 
